# graphboard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vitest.config.ts  vitest.setup.ts
.agents/skills/test-and-fix/: SKILL.md
crates/zxw/: Cargo.toml
crates/zxw/src/: boxes.rs  contraction.rs  error.rs  graph.rs  lib.rs  nodes.rs  phase.rs  spiders.rs  tensor.rs  utils.rs  wasm.rs
crates/zxw/tests/: contraction.rs  graph_serde.rs  phase_grammar.rs  tensor_correctness.rs
crates/zxw/tests/fixtures/: phase_grammar.json
doc/: plans.md  readme.md  todo.md
doc/plans/: zxw-compute-backend.md
public/wasm/zxw/: package.json  zxw.d.ts  zxw.js  zxw_bg.wasm  zxw_bg.wasm.d.ts
scripts/: build-wasm.sh  ping-wasm.mts
src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/graph-editor/: ComputeResultDialog.tsx  ConfirmationDialog.tsx  GraphEditor.tsx  GraphToolbar.tsx  KeyboardShortcutsDialog.tsx  StraightCenterEdge.tsx  VertexGlyphs.tsx  VertexHandles.tsx  VertexLabelEditor.test.tsx  VertexLabelEditor.tsx  VertexNode.tsx  VertexPropertyPanel.tsx  VertexSwatch.tsx  VertexTypeMenu.tsx  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts
src/lib/: download.test.ts  download.ts  filename.test.ts  filename.ts
src/lib/compute/: errors.test.ts  errors.ts  index.test.ts  index.ts  matrix-format.ts  matrix.test.ts  result-types.ts  types.ts  worker.ts
src/lib/graph/: edge-geometry.test.ts  edge-geometry.ts  operations.test.ts  operations.ts  serialization.test.ts  serialization.ts  types.ts  vertex-types.test.ts  vertex-types.ts
src/lib/hooks/: useTrackedDraft.test.ts  useTrackedDraft.ts
src/lib/keyboard/: shortcuts.test.ts  shortcuts.ts
src/lib/label/: renderLabel.test.ts  renderLabel.ts
src/lib/phase/: parser.test.ts  parser.ts
src/store/: graph-store.test.ts  graph-store.ts  selectors.test.ts  selectors.ts
src/test-utils/: factories.ts
src/types/: file-system-access.d.ts
