[package]
name = "zxw"
version = "0.1.0"
edition = "2021"
description = "ZXW calculus tensor evaluation, compiled to WASM for the graph-board frontend"
license = "MIT OR Apache-2.0"

[features]
# Default build is native (cargo test). The wasm feature pulls in
# wasm-bindgen + serde-wasm-bindgen + console_error_panic_hook for the
# browser-bound build.
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[lib]
# `cdylib` is what wasm-pack needs to emit a wasm binary; `rlib` is
# what `cargo test` needs to link against the crate from integration
# tests in `tests/`. Without both, either build target fails.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-complex = "0.4"
ndarray = "0.15"
thiserror = "1"
wasm-bindgen = { version = "0.2", optional = true }
# `js-sys` provides `js_sys::Function` (raw JS function reference) for
# the `compute_tensor` progress callback. Comes with `wasm-bindgen` but
# isn't auto-imported; gated to the `wasm` feature.
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
# Surfaces Rust panics as JS console.error calls (with a backtrace)
# instead of silently aborting the worker. Plan §6.1.
console_error_panic_hook = { version = "0.1", optional = true }
# Note: the crate name uses underscores (not dashes) on crates.io.

[dev-dependencies]
approx = "0.5"          # float-approx for tensor equality in tests

